# id-derive

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  operation.rs
tests/: compiletest.rs  id.rs
tests/errors/: enum.rs  enum.stderr  union.rs  union.stderr
