[package]
name = "id-derive"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
num = "0.2"

[dev-dependencies]
trybuild = "1.0"
macrotest = "0.1"
